--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+   <a href="http://www.google.com/doodles/evidence-of-water-found-on-mars"target="_blank"><img src="http://www.google.com/logos/doodles/2015/evidence-of-water-found-on-mars-5652760466817024.2-hp2x.gif"height="200" alt="在火星上發現水的證據"</a>
+   
+   <hr>
+   <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d28921.865739231966!2d121.54270929999996!3d25.026158300000013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1szh-TW!2stw!4v1468565512795" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+   
+   <hr>
     <table border=0>
         <tr>
            <td>大樂透</td>
-            <td clospan="6">105/6/28第105000058期 <strong>開獎結果</strong></td>
+            <td[clospan="6"]>105/6/28第105000058期 <strong>開獎結果</strong></td>
         </tr>
         <tr>
             <td>開出順序</td>
